feat: change money-requirement